# plutus-sandbox

./: .gitignore  .gitkeep  README.md  cabal.project  cabal.project.freeze  hie.yaml  plutus-sandbox.cabal
.devcontainer/: devcontainer.json
contracts/: Dockerfile  README.md  cabal.project  contracts.cabal  docker-compose.yml  hie.yaml  trash.cabal.project.freeze
contracts/.devcontainer/: Dockerfile  devcontainer.json
contracts/escrow/: .env  Dockerfile  docker-compose.yml
contracts/escrow/.devcontainer/: Dockerfile  devcontainer.json
contracts/escrow/src/: Contracts.hs
contracts/escrow/src/Contracts/: Escrow.hs
contracts/src/Contracts/: Vesting.hs
contracts/test/doctest/: doctest.hs
dev-env/: docker-compose.yml
dev-env/.devcontainer/: Dockerfile  devcontainer.json
src/: Lib.hs
src/Contracts/UseCases/: Vesting.hs
src/PlutusCore/: Examples.hs
test/: Spec.hs
tutorial-walkthrough/: .ghci  CHANGELOG.md  Dockerfile  README.md  cabal.project  docker-compose.yml  hie.yaml  tutorial-walkthrough.cabal
tutorial-walkthrough/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.override.yml
tutorial-walkthrough/plutus-tx-tutorial/: CHANGELOG.md  PlutusTxTutorial.hs  plutus-tx-tutorial.cabal
tutorial-walkthrough/src/Tutorial/: PlutusTxTutorial.hs
tutorial-walkthrough/test/: Spec.hs
