cabal-version:       3.0
name:                contracts
version:             0.1.0.0
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:   
    Contracts
    Contracts.Escrow
  other-modules:

  build-depends:      
    base >=4.13 && <4.14,
    plutus-tx,
    plutus-tx-plugin,
    language-plutus-core,
    plutus-contract,
  hs-source-dirs:
    src
  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  default-language:    Haskell2010

test-suite contracts-tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: 
    base, 
    doctest >= 0.8,
    contracts,
    plutus-tx,
    plutus-tx-plugin,
    language-plutus-core,
    prettyprinter
  default-language:    Haskell2010

