cabal-version:       >=1.10

name:                tutorial-walkthrough
version:             0.1.0.0
license-file:        LICENSE
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     PlutusTxTutorial
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
