cabal-version:       3.0
name:                tutorial-walkthrough
version:             0.1.0.0
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     
    PlutusTxTutorial
  build-depends:      
    base >=4.13 && <4.14,
    plutus-tx,
    plutus-tx-plugin,
    language-plutus-core,
    prettyprinter
  hs-source-dirs:
    plutus-tx-tutorial
  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  default-language:    Haskell2010
