cabal-version:       3.0
name:                tutorial-walkthrough
version:             0.1.0.0
author:              Finley McIlwaine
maintainer:          finleymcilwaine@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     
    Tutorial.PlutusTxTutorial
  other-modules:

  build-depends:      
    base >=4.13 && <4.14,
    plutus-tx,
    plutus-tx-plugin,
    language-plutus-core,
    prettyprinter
  hs-source-dirs:
    src
  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  default-language:    Haskell2010

test-suite tutorial-tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: 
    base >=4.9 && <5,
    tutorial-walkthrough,
    tasty -any
  default-language:    Haskell2010

